@@ -5,6 +5,8 @@ synchronization.
 reassigned to admin
 - deleting a module also deletes assignment of scripts to branches
 - deleting branches and scripts revisited
+- Layout of initial page rivisited, removed code for piwik stats as it 
+was not used anymore
 
 6.10.2010 git
 Project deletion also deletes existing branches for the deleted project 
